--- a/src/page-blog2.html
+++ b/src/page-blog2.html
@@ -409,9 +409,9 @@
                                     全部コミコミ(お一人様)
                                   </p>
                                   <div class="sidebar-campaign-card__price">
-                                    <del
+                                    <div
                                       class="sidebar-campaign-card__normal-price"
-                                      >&yen;56,000</del
+                                      >&yen;56,000</div
                                     >
                                     <div
                                       class="sidebar-campaign-card__discount"
@@ -444,9 +444,9 @@
                                     全部コミコミ(お一人様)
                                   </p>
                                   <div class="sidebar-campaign-card__price">
-                                    <del
+                                    <div
                                       class="sidebar-campaign-card__normal-price"
-                                      >&yen;24,000</del
+                                      >&yen;24,000</div
                                     >
                                     <div
                                       class="sidebar-campaign-card__discount"
