--- a/src/page-campaign.html
+++ b/src/page-campaign.html
@@ -272,8 +272,8 @@
                           <div
                             class="campaign-card__price campaign-card__price--wide"
                           >
-                            <del class="campaign-card__normal-price"
-                              >&yen;56,000</del
+                            <div class="campaign-card__normal-price"
+                              >&yen;56,000</div
                             >
                             <div class="campaign-card__discount">
                               &yen;46,000
@@ -316,8 +316,8 @@
                           <div
                             class="campaign-card__price campaign-card__price--wide"
                           >
-                            <del class="campaign-card__normal-price"
-                              >&yen;24,000</del
+                            <div class="campaign-card__normal-price"
+                              >&yen;24,000</div
                             >
                             <div class="campaign-card__discount">
                               &yen;18,000
@@ -360,8 +360,8 @@
                           <div
                             class="campaign-card__price campaign-card__price--wide"
                           >
-                            <del class="campaign-card__normal-price"
-                              >&yen;10,000</del
+                            <div class="campaign-card__normal-price"
+                              >&yen;10,000</div
                             >
                             <div class="campaign-card__discount">
                               &yen;8,000
@@ -408,8 +408,8 @@
                           <div
                             class="campaign-card__price campaign-card__price--wide"
                           >
-                            <del class="campaign-card__normal-price"
-                              >&yen;20,000</del
+                            <div class="campaign-card__normal-price"
+                              >&yen;20,000</div
                             >
                             <div class="campaign-card__discount">
                               &yen;16,000
