--- a/src/index.html
+++ b/src/index.html
@@ -292,8 +292,8 @@
                             全部コミコミ(お一人様)
                           </p>
                           <div class="campaign-card__price">
-                            <del class="campaign-card__normal-price"
-                              >&yen;56,000</del
+                            <div class="campaign-card__normal-price"
+                              >&yen;56,000</div
                             >
                             <div class="campaign-card__discount">
                               &yen;46,000
@@ -321,8 +321,8 @@
                             全部コミコミ(お一人様)
                           </p>
                           <div class="campaign-card__price">
-                            <del class="campaign-card__normal-price"
-                              >&yen;24,000</del
+                            <div class="campaign-card__normal-price"
+                              >&yen;24,000</div
                             >
                             <div class="campaign-card__discount">
                               &yen;18,000
@@ -350,8 +350,8 @@
                             全部コミコミ(お一人様)
                           </p>
                           <div class="campaign-card__price">
-                            <del class="campaign-card__normal-price"
-                              >&yen;10,000</del
+                            <div class="campaign-card__normal-price"
+                              >&yen;10,000</div
                             >
                             <div class="campaign-card__discount">
                               &yen;8,000
@@ -381,8 +381,8 @@
                             全部コミコミ(お一人様)
                           </p>
                           <div class="campaign-card__price">
-                            <del class="campaign-card__normal-price"
-                              >&yen;20,000</del
+                            <div class="campaign-card__normal-price"
+                              >&yen;20,000</div
                             >
                             <div class="campaign-card__discount">
                               &yen;16,000
@@ -410,8 +410,8 @@
                             全部コミコミ(お一人様)
                           </p>
                           <div class="campaign-card__price">
-                            <del class="campaign-card__normal-price"
-                              >&yen;56,000</del
+                            <div class="campaign-card__normal-price"
+                              >&yen;56,000</div
                             >
                             <div class="campaign-card__discount">
                               &yen;46,000
@@ -439,8 +439,8 @@
                             全部コミコミ(お一人様)
                           </p>
                           <div class="campaign-card__price">
-                            <del class="campaign-card__normal-price"
-                              >&yen;24,000</del
+                            <div class="campaign-card__normal-price"
+                              >&yen;24,000</div
                             >
                             <div class="campaign-card__discount">
                               &yen;18,000
@@ -468,8 +468,8 @@
                             全部コミコミ(お一人様)
                           </p>
                           <div class="campaign-card__price">
-                            <del class="campaign-card__normal-price"
-                              >&yen;10,000</del
+                            <div class="campaign-card__normal-price"
+                              >&yen;10,000</div
                             >
                             <div class="campaign-card__discount">
                               &yen;8,000
@@ -499,8 +499,8 @@
                             全部コミコミ(お一人様)
                           </p>
                           <div class="campaign-card__price">
-                            <del class="campaign-card__normal-price"
-                              >&yen;20,000</del
+                            <div class="campaign-card__normal-price"
+                              >&yen;20,000</div
                             >
                             <div class="campaign-card__discount">
                               &yen;16,000
